--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1086,7 +1086,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Constitutional Proposal (2018)</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1ou1sox1QtWe7rQtUamps81I6adqQEQ78/view?usp=drive_link" download>PDF</a>
       </li>
     </ul>
 
@@ -1214,8 +1214,8 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Ley 42.470 (Resolución N.º 2) — Alza de tarifa del transporte público (2019).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <span class="file-title">Metro Fare Hike (Ley 42470)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1LS98UBztGmRprOtubZaHM0SFbhopyQHO/view?usp=drive_link" download>PDF</a>
       </li>
     </ul>
 
@@ -1331,16 +1331,16 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Acuerdo por la Paz y una Nueva Constitución (2019).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <span class="file-title">Acuerdo por la Paz y una Nueva Constitución (2019)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1NCBXJmr3_uRY41eegkb203_SVapPTxj8/view?usp=drive_link" download>PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Bases Ciudadanas para una Nueva Constitución (boletín 11.617-07).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <span class="file-title">Bases Ciudadanas para una Nueva Constitución (2018)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1SJEs00jVYN1ewfE-QfYSPclMPaNw-yV1/view?usp=drive_link" download>PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Nueva Agenda Social (Comunicado 123766).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/15vI8grF3w6tVotRGAdw30hPsv8rAM0be/view?usp=drive_link" download>PDF</a>
       </li>
     </ul>
 
@@ -1452,8 +1452,8 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Primer discurso de S.E. el Presidente de la República, Gabriel Boric Font, desde el Palacio de La Moneda (2022).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
+        <span class="file-title">The first speech of Gabriel Boric (2022)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1CTnch1deKo58Aa_NOu39vXo78N7aoeTt/view?usp=drive_link" download>PDF</a>
       </li>
     </ul>
 
@@ -1565,20 +1565,16 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Constitutional Proposal (2022).</span>
-        <a class="tiny-link" href="#" download>PDF</a>
-      </li>
-      <li class="item-row">
-        <span class="file-title">El mapa político no oficial de la Convención Constitucional de Tresquintos.</span>
-        <a class="tiny-link" href="#" download>PDF</a>
-      </li>
-      <li class="item-row">
-        <span class="file-title">Informe final: Verdad histórica, reparación integral y garantías de no repetición (Subcomisión de Verdad Histórica, Reparación), diciembre 2021.</span>
-        <a class="tiny-link" href="#" download>PDF</a>
-      </li>
-      <li class="item-row">
-        <span class="file-title">Constitutional Proposal (2022).</span>
+        <span class="file-title">Constitutional Proposal (2022)</span>
         <a class="tiny-link" href="https://drive.google.com/file/d/1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL/view?usp=drive_link" download>PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">El mapa político no oficial de la Convención Constitucional de Tresquintos</span>
+        <a class="tiny-link" href="#" download>PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Informe final: Verdad histórica, reparación integral y garantías de no repetición (Subcomisión de Verdad Histórica, Reparación), diciembre 2021</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1StD25zBmv8fOe1f3xSAGQJD1C7D81cWz/view?usp=drive_link" download>PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Roll-call votes in the Commissions of the Constitutional Convention of Chile, 2021–2022 (dataset).</span>
@@ -1671,15 +1667,6 @@
   <div class="section-title"><strong>CHAPTER 13 – Understanding Rejection: Why the First Constitutional Process Failed</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead"><strong>Documents</strong></div>
-    <ul class="file-list">
-      <!-- No chapter-specific documents provided -->
-    </ul>
-
-    <div class="subhead mt-3"><strong>Literature</strong></div>
-    <ul class="file-list">
-      <!-- No academic literature provided in this chunk -->
-    </ul>
 
     <div class="subhead mt-3"><strong>References</strong></div>
     <ul class="file-list">
@@ -1746,12 +1733,10 @@
 
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
-      <!-- No chapter-specific documents provided in this chunk -->
-    </ul>
-
-    <div class="subhead mt-3"><strong>Literature</strong></div>
-    <ul class="file-list">
-      <!-- No academic literature provided in this chunk -->
+      <li class="item-row">
+        <span class="file-title">Acuerdo por Chile</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1XvHVe0C_NaOA0pVE5t8KibpNoyxeQxnG/view?usp=drive_link" download>PDF</a>
+      </li>
     </ul>
 
     <div class="subhead mt-3"><strong>References</strong></div>
