--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1797,11 +1797,11 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title"><em>Roll-call votes of Senators and Deputies for Pension Withdrawal during the Piñera administration (2018–2022)</em>. Dataset.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <span class="file-title">Homicide Report (2024)</span>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1CbW2gEedsPZWonG6GBnoxKAlZUF9x2Ky/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Observatorio de Homicidios. (2025). <em>Informe de Víctimas de Homicidios Consumados 2024</em>. Santiago.</span>
+        <span class="file-title">Roll-call votes of Senators and Deputies for Pension Withdrawal during the Piñera administration (2018–2022)</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
     </ul>
