--- a/theseus/index.html
+++ b/theseus/index.html
@@ -297,7 +297,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_1" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter1" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
