--- a/theseus/index.html
+++ b/theseus/index.html
@@ -356,7 +356,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_2" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter2" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -414,7 +414,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_3" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter3" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -473,7 +473,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_4" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="#" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter4" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -531,7 +531,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_5" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/UNM2S7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter5" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -592,7 +592,7 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_6" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/JO4KUY" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter6" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
         <div style="text-align:left; max-width:600px; margin:0 auto;">
@@ -650,9 +650,9 @@
           <a href="https://doi.org/10.1007/978-3-031-96463-3_7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
           <a href="https://doi.org/10.7910/DVN/9MM5JG" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
           <a href="https://github.com/kennethbunker/theseus/tree/main/chapter7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
-          <a href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
+          <a href="https://kennethbunker.github.io/theseus/erranta/errata.docx" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
-
+        
         <div style="text-align:left; max-width:600px; margin:0 auto;">
           <p style="font-size:14px; line-height:1.6;">
             <strong>Abstract: </strong>This chapter examines the erosion of voter–party linkages in Chile and its profound implications for the stability of the country’s democracy. By focusing on voter perception, engagement, and trust, it shifts the lens from parties to the electorate. The analysis underscores how declining voter turnout, collapsing trust, and the rise of “ghost” parties and “zombie” party members reflected a widening gap between citizens and the political system. At the heart of the discussion is the argument that this growing disconnect, intensified by the introduction of voluntary voting in 2011, eroded the foundational links that had traditionally connected voters to political parties, thus weakening Chile’s democratic structures. While the proliferation of new political parties might suggest an expansion of pluralism, the chapter demonstrates that many of these parties were born of opportunistic leadership rather than genuine grassroots. This phenomenon, which the chapter terms “representation backsliding,” encapsulates the systematic breakdown of voter–party connections and the increasing fragility of trust in the democratic process. Ultimately, the chapter shows how this detachment, combined with institutional disconnection, fueled political instability, fostering an environment ripe for rupturist rhetoric.<br><br>
