--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2068,6 +2068,19 @@
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Montalva</a>
       </li>
 
+      <li class="item-row">
+        <span class="file-title"> First Round 1964</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Montalva</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title"> First Round 1970</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tomic</a>
+      </li>
+
   </div>
 </section>
 
