--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2063,22 +2063,84 @@
     <div class="subhead mt-3"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title"> First Round 1958</span>
+        <span class="file-title">1958</span>
         <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Montalva</a>
       </li>
 
       <li class="item-row">
-        <span class="file-title"> First Round 1964</span>
+        <span class="file-title">1964</span>
         <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Montalva</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1rnFsyvaUPvd2Rfu0dGbFfHhuysicL-MI/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Montalva</a>
       </li>
 
       <li class="item-row">
-        <span class="file-title"> First Round 1970</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri</a>
+        <span class="file-title">1970</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1AnqDe4m-4tO1uNwAAkHl8j99WRSc2cpc/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1AnqDe4m-4tO1uNwAAkHl8j99WRSc2cpc/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tomic</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1989</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1989</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1993</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1999/2000 1R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lagos</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Marín</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1999/2000 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lagos</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+    </li>
+
+      <li class="item-row">
+        <span class="file-title">2005/2006 1R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2005/2006 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1989</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">1989</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
       </li>
 
   </div>
