--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2117,30 +2117,28 @@
 
       <li class="item-row">
         <span class="file-title">2005/2006 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2005/2006 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2009/2010 1R</span>
         <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
       </li>
 
       <li class="item-row">
-        <span class="file-title">1989</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-      </li>
-
-      <li class="item-row">
-        <span class="file-title">1989</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <span class="file-title">2009/2010 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
       </li>
 
   </div>
