--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2141,6 +2141,48 @@
         <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
       </li>
 
+      <li class="item-row">
+        <span class="file-title">2013 1R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Matthei</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2013 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Matthei</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2017 1R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Guillier</a>
+      </li>
+
+
+      <li class="item-row">
+        <span class="file-title">2017 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Guillier</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2021 1R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Kast</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2021 2R</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Boric</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Kast</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">2025 Primary</span>
+        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Jara</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tohá</a>
+      </li>
   </div>
 </section>
 
